Testing of Standard Template Library

--- a/greedy-search/Makefile
+++ b/greedy-search/Makefile
@@ -1,11 +1,11 @@
-OPTIONS = -c -O3
+OPTIONS = -std=c++11
 COMP = g++
 
 main: main.cpp
-	$(COMP) main.cpp -o main.o
+	$(COMP) $(OPTIONS) main.cpp -o main.o
 
 tsp: tsp.cpp
-	$(COMP) tsp.cpp -o tsp.o
+	$(COMP) $(OPTIONS) tsp.cpp -o tsp.o
 
 clean:
 	rm *.o
