--- a/greedy-search/Makefile
+++ b/greedy-search/Makefile
@@ -4,6 +4,9 @@ COMP = g++
 main: main.cpp
 	$(COMP) $(OPTIONS) main.cpp -o main.o
 
+rdata: rdata.cpp
+	$(COMP) $(OPTIONS) rdata.cpp -o rdata.o
+
 tsp: tsp.cpp
 	$(COMP) $(OPTIONS) tsp.cpp -o tsp.o
 
