Brute force file included

--- a/greedy-algorithm/Makefile
+++ b/greedy-algorithm/Makefile
@@ -4,6 +4,9 @@ COMP = g++
 tsp: rdata.o main.o
 	$(COMP) rdata.o main.o -o tsp
 
+brute.o: brute.cpp brute.h
+	$(COMP) $(OPTIONS) brute.cpp brute.h
+
 rdata.o: rdata.cpp rdata.h
 	$(COMP) $(OPTIONS) rdata.cpp rdata.h
 
